# VSGNastranLoader

./: CMakeLists.txt  main.cpp  nastran.cpp  truck.nas
